--- a/templates/east-analogin.tex
+++ b/templates/east-analogin.tex
@@ -1,11 +1,8 @@
- 
-
-\pgfmathsetmacro{\xpos}{ {{.Ypos}} } % You can change this value as needed
-% Draw an analog-like waveform arrow into pin{{.Pin}}
+\pgfmathsetmacro{\xpos}{ {{.Ypos}} } 
 \draw[thick, ->] ($(chip.east) + (1,\xpos)$)
     to[edge label={},out=90,in=90] ++(-0.1,0.2)
     to[out=90,in=90] ++(-0.1,-0.2)
     -- ($(chip.east) + (0.5,\xpos)$);
 \draw
 (chip.east)  ++(1,\xpos)
-node[right] { {{.PinText}} } ;
+node[right] { {{.PinText}} };
