--- a/internal/data/templates/body.tex
+++ b/internal/data/templates/body.tex
@@ -9,10 +9,7 @@
     ++(0,0.1)
     node[above left] {1} 
 
-    % Draw an arrow flowing into pin 1 from the left
-
- 
-
+   
     (chip.west) ++(0,0.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=east] {}  
     node[right] {PB3} 
@@ -61,8 +58,7 @@
  
     
     (chip.east)  ++(-0,-1.5) 
-        node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
+    node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
     node[left] {PB0}
     ++(0, 0.1)
-    node[above right] {5} 
-        ;
+    node[above right] {5}  ;
