--- a/output/output.tex
+++ b/output/output.tex
@@ -1,10 +1,128 @@
 \documentclass{article}
+\usepackage{circuitikz}
+\usepackage{tikz}
+ 
+\usepackage[paperwidth=5in, 
+    paperheight=3in,
+    left=0.20in,
+    right=0.2in,
+    top=0.2in,
+    bottom=0.2in]{geometry}
+\usepackage{amssymb}  
+    
 \begin{document}
 
 \begin{center}
-    \largeYum
+    \huge\textbf{ ACS123 }
+    \large\textbf{ a thing }
 \end{center}
+ 
+\begin{center}
+\begin{circuitikz} 
+\draw
+ 
 
-I have a red apple.
+    % Draw the ATTINY85 chip
+    (0,0) node[draw, minimum width=3cm, minimum height=4cm, anchor=center] (chip) {ATTINY85}
 
+    % Draw the pins and labels
+    % Left side pins
+    (chip.west)  ++(0,1.5)
+    node[rectangle, draw,   minimum size=4pt, anchor=east] {}
+    node[right] {RST} 
+    ++(0,0.1)
+    node[above left] {1} 
+
+   
+    (chip.west) ++(0,0.5) 
+    node[rectangle, draw,   minimum size=4pt, anchor=east] {}  
+    node[right] {PB3} 
+    ++(0,0.1)
+    node[above left] {2}  
+     
+    (chip.west)   ++(0,-0.5) 
+    node[rectangle, draw,   minimum size=4pt, anchor=east] {}
+    node[right] {PB4} 
+    ++(0,0.1)
+    node[above left] {3} 
+
+    
+    (chip.west) ++(0,-1.5) 
+    node[rectangle, draw,   minimum size=4pt, anchor=east] {} % Ground
+    node[right] {GND} 
+    ++(0,0.1)
+    node[above left] {4} 
+ 
+
+
+
+    % Right side pins
+    (chip.east)  ++(-0,1.5) 
+    node[rectangle, draw,   minimum size=4pt, anchor=west] {} % Ground
+    node[left] {VCC}
+    ++(0, 0.1)
+    node[above right] {8} 
+      
+   
+    
+    (chip.east) ++(-0,0.5)
+    node[rectangle, draw,   minimum size=4pt, anchor=west] {}  
+    node[left] {PB2}
+    ++(0, 0.1)
+    node[above right] {7} 
+
+ 
+    
+    (chip.east)   ++(-0,-0.5) 
+    node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
+    node[left] {PB1}
+    ++(0, 0.1)
+    node[above right] {6} 
+        
+ 
+    
+    (chip.east)  ++(-0,-1.5) 
+    node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
+    node[left] {PB0}
+    ++(0, 0.1)
+    node[above right] {5}  ;
+\pgfmathsetmacro{\xpos}{ 0.5 }  
+\draw[thick, ->] ($(chip.west) + (-1,\xpos)$)
+    to[edge label={},out=90,in=90] ++(0.1,0.2)
+    to[out=90,in=90] ++(0.1,-0.2)
+    -- ($(chip.west) + (-0.5,\xpos)$);
+\draw
+(chip.west)  ++(-1,\xpos)
+node[left] { pot1 };\pgfmathsetmacro{\xpos}{ -0.5 }  
+\draw[thick, ->] ($(chip.west) + (-1,\xpos)$)
+    to[edge label={},out=90,in=90] ++(0.1,0.2)
+    to[out=90,in=90] ++(0.1,-0.2)
+    -- ($(chip.west) + (-0.5,\xpos)$);
+\draw
+(chip.west)  ++(-1,\xpos)
+node[left] { pot2 }; 
+\pgfmathsetmacro{\xpos}{ -1.5 } 
+
+\draw[thick, ->] ($(chip.east) + (0.5,\xpos)$) -- ++(0.1,0) -- ++(0,0.2) -- ++(0.2,0) -- ++(0,-0.2) -- ++(0.1,0) -- ($(chip.east) + (1,\xpos)$);
+\draw
+(chip.east)  ++(1,\xpos)
+node[right] { trigger } ;\pgfmathsetmacro{\xpos}{ -0.5 } 
+\draw[thick, ->] ($(chip.east) + (0.5,\xpos)$) -- ++(0.00,0) -- ++(0,0.2) -- ++(0.05,0) -- ++(0,-0.2) -- ++(0.05,0) -- ++(0,0.2) -- ++(0.07,0) -- ++(0,-0.2)  -- ++(0.10,0) -- ++(0,0.2) -- ++(0.08,0) -- ++(0,-0.2) -- ++(0.08,0) -- ($(chip.east) + (1,\xpos)$);
+
+\draw
+(chip.east)  ++(1,\xpos)
+node[right] { out pwm } ; \pgfmathsetmacro{\xpos}{ 0.5 } 
+\draw[thick, ->] ($(chip.east) + (1,\xpos)$) -- ++(-0.1,0) -- ++(0,0.2) -- ++(-0.2,0) -- ++(0,-0.2) -- ++(-0.2,0) -- ($(chip.east) + (0.5,\xpos)$);
+\draw
+(chip.east)  ++(1,\xpos)
+node[right]  { clock };
+
+
+\end{circuitikz}
+\end{center}
+\begin{center}
+    
+    \small{ stuff }
+    
+\end{center}
 \end{document}
