--- a/templates/attiny85.tex
+++ b/templates/attiny85.tex
@@ -8,26 +8,26 @@
     right=0.2in,
     top=0.2in,
     bottom=0.2in]{geometry}
-\usepackage{amssymb} % For triangle symbols if used in text
-
+\usepackage{amssymb}  
     
 \begin{document}
 
 \begin{center}
-    \huge\textbf{ {{.ATTiny85Title}} }
-    \large\textbf{ {{.ATTiny85SubTitle}} }
+    \huge\textbf{ {{.Title}} \\}
+    \large\textbf{ {{.Subtitle}} }
 \end{center}
  
 \begin{center}
 \begin{circuitikz} 
 \draw
  
-{{.ATTiny85-data}}
+
+{{ .Body }}
 \end{circuitikz}
 \end{center}
 \begin{center}
     
-    \small{ {{.ATTiny85Tag}} }
+    \small{ {{.Tag}} }
     
 \end{center}
 \end{document}
