--- a/internal/data/templates/body.tex
+++ b/internal/data/templates/body.tex
@@ -1,29 +1,37 @@
+    
+    \draw
     % Draw the ATTINY85 chip
     (0,0) node[draw, minimum width=3cm, minimum height=4cm, anchor=center] (chip) {ATTINY85}
+;
 
+\draw 
+(chip.north)
+        [thick] (0.5 ,2) arc[start angle=0, end angle=-180, radius=0.4cm];
+
+    \draw
     % Draw the pins and labels
     % Left side pins
-    (chip.west)  ++(0,1.5)
+    (chip.west)  ++(0.01,1.5)
     node[rectangle, draw,   minimum size=4pt, anchor=east] {}
     node[right] {RST} 
     ++(0,0.1)
     node[above left] {1} 
 
    
-    (chip.west) ++(0,0.5) 
+    (chip.west) ++(0.01,0.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=east] {}  
     node[right] {PB3} 
     ++(0,0.1)
     node[above left] {2}  
      
-    (chip.west)   ++(0,-0.5) 
+    (chip.west)   ++(0.01,-0.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=east] {}
     node[right] {PB4} 
     ++(0,0.1)
     node[above left] {3} 
 
     
-    (chip.west) ++(0,-1.5) 
+    (chip.west) ++(0.01,-1.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=east] {} % Ground
     node[right] {GND} 
     ++(0,0.1)
@@ -33,15 +41,15 @@
 
 
     % Right side pins
-    (chip.east)  ++(-0,1.5) 
-    node[rectangle, draw,   minimum size=4pt, anchor=west] {} % Ground
-    node[left] {VCC}
+    (chip.east)  ++(-0.01,1.5) 
+    node[rectangle, draw, fill=red,  minimum size=4pt, anchor=west] {} % Ground
+    node[left] {$V_{cc}$}
     ++(0, 0.1)
     node[above right] {8} 
       
    
     
-    (chip.east) ++(-0,0.5)
+    (chip.east) ++(-0.01,0.5)
     node[rectangle, draw,   minimum size=4pt, anchor=west] {}  
     node[left] {PB2}
     ++(0, 0.1)
@@ -49,7 +57,7 @@
 
  
     
-    (chip.east)   ++(-0,-0.5) 
+    (chip.east)   ++(-0.01,-0.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
     node[left] {PB1}
     ++(0, 0.1)
@@ -57,7 +65,7 @@
         
  
     
-    (chip.east)  ++(-0,-1.5) 
+    (chip.east)  ++(-0.01,-1.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
     node[left] {PB0}
     ++(0, 0.1)
