--- a/output/output.tex
+++ b/output/output.tex
@@ -13,41 +13,50 @@
 \begin{document}
 
 \begin{center}
-    \huge\textbf{ ACS123 }
-    \large\textbf{ a thing }
+    \fontfamily{qhv}\selectfont
+    \huge\textbf{ ACS-85-0001 \\}
+    \large\textbf{ Simple Oscillator }
 \end{center}
  
 \begin{center}
 \begin{circuitikz} 
-\draw
+    \fontfamily{qhv}\selectfont
  
 
+    
+    \draw
     % Draw the ATTINY85 chip
     (0,0) node[draw, minimum width=3cm, minimum height=4cm, anchor=center] (chip) {ATTINY85}
+;
 
+\draw 
+(chip.north)
+        [thick] (0.5 ,2) arc[start angle=0, end angle=-180, radius=0.4cm];
+
+    \draw
     % Draw the pins and labels
     % Left side pins
-    (chip.west)  ++(0,1.5)
+    (chip.west)  ++(0.01,1.5)
     node[rectangle, draw,   minimum size=4pt, anchor=east] {}
     node[right] {RST} 
     ++(0,0.1)
     node[above left] {1} 
 
    
-    (chip.west) ++(0,0.5) 
+    (chip.west) ++(0.01,0.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=east] {}  
     node[right] {PB3} 
     ++(0,0.1)
     node[above left] {2}  
      
-    (chip.west)   ++(0,-0.5) 
+    (chip.west)   ++(0.01,-0.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=east] {}
     node[right] {PB4} 
     ++(0,0.1)
     node[above left] {3} 
 
     
-    (chip.west) ++(0,-1.5) 
+    (chip.west) ++(0.01,-1.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=east] {} % Ground
     node[right] {GND} 
     ++(0,0.1)
@@ -57,15 +66,15 @@
 
 
     % Right side pins
-    (chip.east)  ++(-0,1.5) 
-    node[rectangle, draw,   minimum size=4pt, anchor=west] {} % Ground
-    node[left] {VCC}
+    (chip.east)  ++(-0.01,1.5) 
+    node[rectangle, draw, fill=red,  minimum size=4pt, anchor=west] {} % Ground
+    node[left] {$V_{cc}$}
     ++(0, 0.1)
     node[above right] {8} 
       
    
     
-    (chip.east) ++(-0,0.5)
+    (chip.east) ++(-0.01,0.5)
     node[rectangle, draw,   minimum size=4pt, anchor=west] {}  
     node[left] {PB2}
     ++(0, 0.1)
@@ -73,7 +82,7 @@
 
  
     
-    (chip.east)   ++(-0,-0.5) 
+    (chip.east)   ++(-0.01,-0.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
     node[left] {PB1}
     ++(0, 0.1)
@@ -81,48 +90,47 @@
         
  
     
-    (chip.east)  ++(-0,-1.5) 
+    (chip.east)  ++(-0.01,-1.5) 
     node[rectangle, draw,   minimum size=4pt, anchor=west] {} 
     node[left] {PB0}
     ++(0, 0.1)
     node[above right] {5}  ;
 \pgfmathsetmacro{\xpos}{ 0.5 }  
-\draw[thick, ->] ($(chip.west) + (-1,\xpos)$)
-    to[edge label={},out=90,in=90] ++(0.1,0.2)
-    to[out=90,in=90] ++(0.1,-0.2)
-    -- ($(chip.west) + (-0.5,\xpos)$);
+\draw[thick, ->] ($(chip.west) + (-0.5,\xpos)$) -- ++(-0.1,0) -- ++(0,0.2) -- ++(-0.2,0) -- ++(0,-0.2) -- ++(-0.2,0) -- ($(chip.west) + (-1,\xpos)$);
 \draw
 (chip.west)  ++(-1,\xpos)
-node[left] { pot1 };\pgfmathsetmacro{\xpos}{ -0.5 }  
-\draw[thick, ->] ($(chip.west) + (-1,\xpos)$)
-    to[edge label={},out=90,in=90] ++(0.1,0.2)
-    to[out=90,in=90] ++(0.1,-0.2)
-    -- ($(chip.west) + (-0.5,\xpos)$);
+ node[left] { LFO };
+
+\pgfmathsetmacro{\xpos}{ -0.5 }  
+\draw[thick, ->] ($(chip.west) + (-0.5,\xpos)$) -- ++(-0.1,0) -- ++(0,0.2) -- ++(-0.2,0) -- ++(0,-0.2) -- ++(-0.2,0) -- ($(chip.west) + (-1,\xpos)$);
 \draw
 (chip.west)  ++(-1,\xpos)
-node[left] { pot2 }; 
+ node[left] { LFO };
+
+ 
 \pgfmathsetmacro{\xpos}{ -1.5 } 
 
 \draw[thick, ->] ($(chip.east) + (0.5,\xpos)$) -- ++(0.1,0) -- ++(0,0.2) -- ++(0.2,0) -- ++(0,-0.2) -- ++(0.1,0) -- ($(chip.east) + (1,\xpos)$);
 \draw
 (chip.east)  ++(1,\xpos)
-node[right] { trigger } ;\pgfmathsetmacro{\xpos}{ -0.5 } 
-\draw[thick, ->] ($(chip.east) + (0.5,\xpos)$) -- ++(0.00,0) -- ++(0,0.2) -- ++(0.05,0) -- ++(0,-0.2) -- ++(0.05,0) -- ++(0,0.2) -- ++(0.07,0) -- ++(0,-0.2)  -- ++(0.10,0) -- ++(0,0.2) -- ++(0.08,0) -- ++(0,-0.2) -- ++(0.08,0) -- ($(chip.east) + (1,\xpos)$);
+node[right] { 434hz } ; 
+\pgfmathsetmacro{\xpos}{ -0.5 } 
 
+\draw[thick, ->] ($(chip.east) + (0.5,\xpos)$) -- ++(0.1,0) -- ++(0,0.2) -- ++(0.2,0) -- ++(0,-0.2) -- ++(0.1,0) -- ($(chip.east) + (1,\xpos)$);
 \draw
 (chip.east)  ++(1,\xpos)
-node[right] { out pwm } ; \pgfmathsetmacro{\xpos}{ 0.5 } 
-\draw[thick, ->] ($(chip.east) + (1,\xpos)$) -- ++(-0.1,0) -- ++(0,0.2) -- ++(-0.2,0) -- ++(0,-0.2) -- ++(-0.2,0) -- ($(chip.east) + (0.5,\xpos)$);
+node[right] { 347hz } ; 
+\pgfmathsetmacro{\xpos}{ 0.5 } 
+
+\draw[thick, ->] ($(chip.east) + (0.5,\xpos)$) -- ++(0.1,0) -- ++(0,0.2) -- ++(0.2,0) -- ++(0,-0.2) -- ++(0.1,0) -- ($(chip.east) + (1,\xpos)$);
 \draw
 (chip.east)  ++(1,\xpos)
-node[right]  { clock };
-
-
+node[right] { ramp } ;
 \end{circuitikz}
 \end{center}
 \begin{center}
     
-    \small{ stuff }
+    \small{ github.com/robstave/ArduinoComponentSketches }
     
 \end{center}
 \end{document}
